Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/Account_Merge_Update__mdt.object-meta.xml
<CustomObject>
    <description>Account Merge Update Custom Metadata Type</description>
    <label>Account Merge Update</label>
    <pluralLabel>Account Merge Update</pluralLabel>
</CustomObject>