Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address__c</fullName>
                <default>true</default>
                <label>Address__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>