Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/fields/Reference_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field_API_Name__c</fullName>
    <description>Reference Field- Account Field API Name</description>
    <label>Reference Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>