Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <description>Target Field API Name</description>
    <label>Target Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>