Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/fields/Target_Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Data_Type__c</fullName>
    <description>The Data type for Target fields</description>
    <label>Target Field Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text(255)</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>