Prod-EU/force-app/main/default/objects/Account_Merge_Update__mdt/fields/Target_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Value__c</fullName>
    <description>Value for the target field to be updated.</description>
    <label>Target Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>